--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Yermek",
-  "license": "MIT"
+  "author": "yermek-alzhanov <yermek-alzhanov@utulsa.edu>",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.15.2"
+  }
 }
